--- a/Login.html
+++ b/Login.html
@@ -6,128 +6,191 @@
     <link rel="stylesheet" href="styles.css">
     <title>Login</title>
     <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(to bottom right, #4b6cb7, #182848);
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
 
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
+        header {
+            background-color: rgba(0, 0, 0, 0.7);
+            width: 100%;
+            padding: 15px 0;
+            text-align: center;
+            position: fixed;
+            top: 0;
+            z-index: 100;
+        }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
 
-nav li {
-    display: inline;
-    margin-right: 20px;
-}
+        nav li {
+            display: inline-block;
+            margin-right: 20px;
+        }
 
-nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 18px;
-}
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s ease;
+        }
 
-.login {
-    text-align: center;
-    padding: 40px;
-}
+        nav a:hover {
+            color: #ffd700;
+        }
 
-.login h1 {
-    font-size: 36px;
-    color: #333;
-    margin-bottom: 20px;
-}
+        /* Login Form Container */
+        .login {
+            background-color: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 450px;
+            text-align: center;
+            margin-top: 100px;
+        }
 
-.form-group {
-    margin: 20px 0;
-}
+        .login h1 {
+            font-size: 36px;
+            color: #ffd700;
+            margin-bottom: 30px;
+        }
 
-.form-group label {
-    font-weight: bold;
-    color: #333;
-    display: block;
-}
+        .form-group {
+            margin-bottom: 25px;
+            text-align: left;
+        }
 
-.form-group input[type="text"],
-.form-group input[type="password"] {
-    width: 30%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
+        .form-group label {
+            font-weight: 600;
+            display: block;
+            margin-bottom: 8px;
+            color: #ffd700;
+        }
 
-button {
-    display: inline-block;
-    background-color: #4b6cb7;
-    color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 18px;
-}
+        .form-group input[type="text"],
+        .form-group input[type="password"] {
+            width: 100%;
+            padding: 12px;
+            background-color: rgba(255, 255, 255, 0.2);
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            color: #fff;
+            transition: background-color 0.3s ease;
+        }
 
-button:hover {
-    background-color: #354f96;
-}
+        .form-group input[type="text"]:focus,
+        .form-group input[type="password"]:focus {
+            outline: none;
+            background-color: rgba(255, 255, 255, 0.3);
+        }
 
+        button {
+            width: 100%;
+            padding: 15px;
+            background: linear-gradient(to right, #ff512f, #dd2476);
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: transform 0.3s ease, background 0.3s ease;
+        }
+
+        button:hover {
+            background: linear-gradient(to right, #ff9966, #ff5e62);
+            transform: translateY(-3px);
+        }
+
+        /* Success message */
+        .success-message {
+            margin-top: 20px;
+            color: #00ff7f;
+            font-size: 18px;
+            display: none;
+        }
     </style>
 </head>
 <body>
+    <!-- Navigation -->
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="signup.html">SignUp</a></li>
-                <li><a href="Login.html">Login</a></li>
-                <li><a href="attendence.html">Attendence</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="attendence.html">Attendance</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <!-- Add links to other pages here -->
             </ul>
         </nav>
     </header>
+
+    <!-- Login Form -->
     <section class="login">
         <h1>Login</h1>
-        <form>
+        <form id="login-form" onsubmit="return validateForm(event)">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
             </div>
             <button type="submit">Login</button>
         </form>
+        <div class="success-message" id="success-message">
+            Successfully logged in! Welcome back.
+        </div>
     </section>
+
     <script>
-        // JavaScript for form validation
-        function validateForm() {
+        // JavaScript for form validation and redirection
+        function validateForm(event) {
+            event.preventDefault(); // Prevent form submission
+
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             if (username.trim() === '' || password.trim() === '') {
                 alert('Username and password are required');
-                return false; // Prevent form submission
+                return false; // Prevent form submission if empty fields
             }
 
-            // You can add more advanced validation here if needed
+            // You can add your login API logic here to check credentials
 
-            return true; // Form will be submitted
+            // If credentials are valid, show success message and redirect
+            document.getElementById('success-message').style.display = 'block';
+
+            // Redirect to homepage after 2 seconds (optional, for smooth user experience)
+            setTimeout(function() {
+                window.location.href = "index.html"; // Redirect to homepage
+            }, 2000);
+
+            return true; // Allow form submission if needed (optional)
         }
     </script>
 </body>
 </html>
-
