--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!-- <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -113,7 +113,7 @@ contact h2 {
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <!-- Add links to other pages here -->
-            </ul>
+            <!-- </ul>
         </nav>
     </header>
 
@@ -163,4 +163,225 @@ contact h2 {
         });
     </script>
 </body>
-</html>
+</html> 
+
+ --> 
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Mess Management System</title>
+     <style>
+         /* Global Styles */
+         * {
+             margin: 0;
+             padding: 0;
+             box-sizing: border-box;
+             scroll-behavior: smooth;
+         }
+         body {
+             font-family: 'Poppins', sans-serif;
+             background-color: #f4f4f9;
+             line-height: 1.6;
+             overflow-x: hidden;
+         }
+         h1, h2, h3, p {
+             color: #2c3e50;
+         }
+         a {
+             text-decoration: none;
+         }
+ 
+         /* Header Styles */
+         header {
+             position: fixed;
+             width: 100%;
+             top: 0;
+             z-index: 100;
+             padding: 15px 0;
+             background: linear-gradient(135deg, #6b0f1a, #b91372);
+             transition: background-color 0.4s ease-in-out;
+         }
+         nav ul {
+             list-style: none;
+             display: flex;
+             justify-content: center;
+             gap: 30px;
+         }
+         nav li {
+             display: inline;
+         }
+         nav a {
+             color: #fff;
+             font-size: 18px;
+             font-weight: bold;
+             padding: 10px 20px;
+             border-radius: 5px;
+             transition: all 0.3s ease-in-out;
+         }
+         nav a:hover {
+             background-color: #fff;
+             color: #6b0f1a;
+         }
+ 
+         /* Hero Section */
+         .hero {
+             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('your-image-url.jpg') center/cover no-repeat;
+             height: 90vh;
+             display: flex;
+             justify-content: center;
+             align-items: center;
+             text-align: center;
+             color: #fff;
+             padding: 0 20px;
+         }
+         .hero-content {
+             animation: fadeIn 1.5s ease-in-out;
+         }
+         @keyframes fadeIn {
+             from { opacity: 0; transform: translateY(-50px); }
+             to { opacity: 1; transform: translateY(0); }
+         }
+         .hero h1 {
+             font-size: 48px;
+             margin-bottom: 20px;
+         }
+         .hero p {
+             font-size: 22px;
+             margin-bottom: 30px;
+         }
+         .cta-button {
+             background: linear-gradient(135deg, #4b6cb7, #182848);
+             color: #fff;
+             padding: 12px 30px;
+             border-radius: 8px;
+             font-weight: bold;
+             font-size: 20px;
+             transition: transform 0.3s ease, background-color 0.3s ease;
+             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+         }
+         .cta-button:hover {
+             transform: translateY(-5px);
+             background-color: #3a4a82;
+         }
+ 
+         /* Sections */
+         .section {
+             padding: 80px 20px;
+             text-align: center;
+             background-color: #f4f4f9;
+         }
+         .about, .features, .contact {
+             margin: 40px 0;
+             background-color: #fff;
+             border-radius: 12px;
+             padding: 40px;
+             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+         }
+         .about h2, .features h2, .contact h2 {
+             font-size: 36px;
+             color: #6b0f1a;
+             margin-bottom: 20px;
+         }
+         .features ul {
+             list-style: none;
+             padding: 0;
+         }
+         .features li {
+             font-size: 20px;
+             margin: 15px 0;
+             color: #2c3e50;
+         }
+ 
+         /* Contact Section */
+         .contact p {
+             margin-bottom: 20px;
+         }
+ 
+         /* Footer */
+         footer {
+             background-color: #6b0f1a;
+             color: #fff;
+             text-align: center;
+             padding: 20px;
+         }
+ 
+         /* Responsive Design */
+         @media (max-width: 768px) {
+             .hero h1 {
+                 font-size: 36px;
+             }
+             .hero p {
+                 font-size: 18px;
+             }
+             .cta-button {
+                 font-size: 16px;
+                 padding: 10px 20px;
+             }
+         }
+     </style>
+ </head>
+ <body>
+     <!-- Header -->
+     <header>
+         <nav>
+             <ul>
+                 <li><a href="index.html">Home</a></li>
+                 <li><a href="signup.html">Sign Up</a></li>
+                 <li><a href="login.html">Login</a></li>
+                 <li><a href="attendance.html">Attendance</a></li>
+                 <li><a href="feedback.html">Feedback</a></li>
+                 <li><a href="menu.html">Menu</a></li>
+                 <li><a href="contact.html">Contact</a></li>
+             </ul>
+         </nav>
+     </header>
+ 
+     <!-- Hero Section -->
+     <section class="hero">
+         <div class="hero-content">
+             <h1>Welcome to Our Mess Management System</h1>
+             <p>Enjoy Delicious Meals with Seamless Management</p>
+             <a href="menu.html" class="cta-button">Explore Menu</a>
+         </div>
+     </section>
+ 
+     <!-- About Section -->
+     <section class="about section">
+         <h2>About Us</h2>
+         <p>Our mess management system is dedicated to providing efficient service and delicious meals for students and staff.</p>
+     </section>
+ 
+     <!-- Features Section -->
+     <section class="features section">
+         <h2>Key Features</h2>
+         <ul>
+             <li>Automated Attendance Tracking</li>
+             <li>Wide Range of Menu Options</li>
+             <li>Efficient Mess Management System</li>
+         </ul>
+     </section>
+ 
+     <!-- Contact Section -->
+     <section class="contact section">
+         <h2>Contact Us</h2>
+         <p>For inquiries or feedback, reach out to us anytime.</p>
+         <a href="contact.html" class="cta-button">Get in Touch</a>
+     </section>
+ 
+     <!-- Footer -->
+     <footer>
+        Mess Management
+     </footer>
+ 
+     <!-- JavaScript for sticky header -->
+     <script>
+         const header = document.querySelector('header');
+         window.addEventListener('scroll', () => {
+             header.style.backgroundColor = window.scrollY > 50 ? '#182848' : 'transparent';
+         });
+     </script>
+ </body>
+ </html>
+ 
