--- a/signup.html
+++ b/signup.html
@@ -3,129 +3,191 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Sign Up</title>
     <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(to bottom right, #4b6cb7, #182848);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            color: #fff;
+        }
 
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
+        /* Header Styling */
+        header {
+            background-color: rgba(0, 0, 0, 0.5);
+            width: 100%;
+            padding: 15px 0;
+            text-align: center;
+            position: fixed;
+            top: 0;
+            z-index: 100;
+        }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
+        nav ul {
+            list-style: none;
+        }
 
-nav li {
-    display: inline;
-    margin-right: 20px;
-}
+        nav li {
+            display: inline-block;
+            margin-right: 20px;
+        }
 
-nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 18px;
-}
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s ease;
+        }
 
-.signup {
-    text-align: center;
-    padding: 40px;
-}
+        nav a:hover {
+            color: #ffd700;
+        }
 
-.signup h1 {
-    font-size: 36px;
-    color: #333;
-    margin-bottom: 20px;
-}
+        /* Signup Form Container */
+        .signup {
+            background-color: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            margin-top: 100px;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 450px;
+            text-align: center;
+        }
 
-.form-group {
-    margin: 20px 0;
-}
+        .signup h1 {
+            font-size: 36px;
+            color: #ffd700;
+            margin-bottom: 30px;
+        }
 
-.form-group label {
-    font-weight: bold;
-    color: #333;
-    display: block;
-}
+        .form-group {
+            margin-bottom: 25px;
+            text-align: left;
+        }
 
-.form-group input[type="text"],
-.form-group input[type="email"],
-.form-group input[type="password"] {
-    width: 30%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
+        .form-group label {
+            font-weight: 600;
+            display: block;
+            margin-bottom: 8px;
+            color: #ffd700;
+        }
 
-button {
-    display: inline-block;
-    background-color: #4b6cb7;
-    color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 18px;
-}
+        .form-group input {
+            width: 100%;
+            padding: 12px;
+            background-color: rgba(255, 255, 255, 0.2);
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            color: #fff;
+        }
 
-button:hover {
-    background-color: #354f96;
-}
+        .form-group input:focus {
+            outline: none;
+            background-color: rgba(255, 255, 255, 0.3);
+        }
 
+        button {
+            width: 100%;
+            padding: 15px;
+            background: linear-gradient(to right, #ff512f, #dd2476);
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: transform 0.3s ease, background 0.3s ease;
+            margin-top: 20px;
+        }
+
+        button:hover {
+            background: linear-gradient(to right, #ff9966, #ff5e62);
+            transform: translateY(-3px);
+        }
+
+        .success-message {
+            margin-top: 20px;
+            color: #00ff7f;
+            font-size: 18px;
+            display: none;
+        }
     </style>
 </head>
 <body>
+    <!-- Navigation -->
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="signup.html">SignUp</a></li>
-                <li><a href="Login.html">Login</a></li>
-                <li><a href="attendence.html">Attendence</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="attendance.html">Attendance</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <!-- Add links to other pages here -->
             </ul>
         </nav>
     </header>
-  
 
+    <!-- Sign-Up Form -->
     <section class="signup">
-        <h1>Sign Up</h1>
-        <form>
+        <h1>Create Your Account</h1>
+        <form id="signup-form">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Create a password" required>
             </div>
             <div class="form-group">
                 <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
+                <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
             </div>
             <div class="form-group">
                 <label for="roll-no">Roll Number:</label>
-                <input type="text" id="roll-no" name="roll-no" required>
+                <input type="text" id="roll-no" name="roll-no" placeholder="Enter your roll number" required>
             </div>
             <button type="submit">Sign Up</button>
+            <div class="success-message" id="success-message">
+                Successfully signed up! Welcome to our service.
+            </div>
         </form>
     </section>
+
+    <script>
+        // JavaScript to handle form submission
+        const form = document.getElementById('signup-form');
+        const successMessage = document.getElementById('success-message');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent page refresh
+
+            // Show success message
+            successMessage.style.display = 'block';
+
+            // Clear the form fields
+            form.reset();
+        });
+    </script>
 </body>
 </html>
