--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                  <li><a href="index.html">Home</a></li>
                  <li><a href="signup.html">Sign Up</a></li>
                  <li><a href="login.html">Login</a></li>
-                 <li><a href="attendance.html">Attendance</a></li>
+                 <li><a href="attendence.html">Attendance</a></li>
                  <li><a href="feedback.html">Feedback</a></li>
                  <li><a href="menu.html">Menu</a></li>
                  <li><a href="contact.html">Contact</a></li>
