--- a/signup.html
+++ b/signup.html
@@ -134,7 +134,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="Login.html">Login</a></li>
                 <li><a href="attendence.html">Attendance</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="menu.html">Menu</a></li>
